fix(post) : fix responsive on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,7 @@
   overflow-y: auto;
   overflow-x: hidden;
   position: relative;
-  height: calc(100vh - #{$header-height});
+  height: calc(var(--vh, 1vh) * 100 - #{$header-height});
 }
 
 .motif {
